Implement playlist editing for music player screen

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,216 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.music_player.MusicPlayerActivity">
 
-    <ImageView
-        android:id="@+id/music_player_song_artwork_background"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/music_player_fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:contentDescription="@string/music_artwork_background"
-        android:scaleType="centerCrop"
-        android:src="@drawable/shape_default_artwork_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/music_player_song_artwork"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:contentDescription="@string/music_artwork"
-        android:scaleType="centerCrop"
-        android:transitionName="song_artwork"
-        app:layout_constraintBottom_toTopOf="@+id/music_player_song_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/music_player_screen_title" />
-
-    <com.chibde.visualizer.BarVisualizer
-        android:id="@+id/music_player_visualizer"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:alpha="0.75"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_song_artwork"
-        app:layout_constraintEnd_toEndOf="@+id/music_player_song_artwork"
-        app:layout_constraintStart_toStartOf="@+id/music_player_song_artwork" />
-
-    <ImageButton
-        android:id="@+id/music_player_play_pause_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="@dimen/music_play_pause_btn_size"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="65dp"
-        android:contentDescription="@string/play_pause_btn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_play_pause_btn" />
-
-    <ImageButton
-        android:id="@+id/music_player_skip_next_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="@dimen/music_small_control_btn_size"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:contentDescription="@string/skip_next_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintStart_toEndOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
-        app:srcCompat="@drawable/ic_skip_next_24dp"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <ImageButton
-        android:id="@+id/music_player_skip_prev_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="@dimen/music_small_control_btn_size"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:contentDescription="@string/skip_prev_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintEnd_toStartOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
-        app:srcCompat="@drawable/ic_skip_prev_24dp"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <ImageButton
-        android:id="@+id/music_player_repeat_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="@dimen/music_small_control_btn_size"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:contentDescription="@string/repeat_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
-        app:srcCompat="@drawable/ic_repeat_btn"
-        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
-
-    <ImageButton
-        android:id="@+id/music_player_shuffle_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="@dimen/music_small_control_btn_size"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:contentDescription="@string/shuffle_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/music_player_play_pause_btn"
-        app:srcCompat="@drawable/ic_shuffle_btn"
-        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
-
-    <com.google.android.exoplayer2.ui.DefaultTimeBar
-        android:id="@+id/music_player_seekbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="40dp"
-        android:contentDescription="@string/seekbar"
-        app:buffered_color="#A6F4F4F4"
-        app:layout_constraintBottom_toTopOf="@+id/music_player_play_pause_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:played_color="@color/white"
-        app:scrubber_color="@color/white"
-        app:unplayed_color="@color/bright_grey" />
-
-    <TextView
-        android:id="@+id/music_player_song_current_position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/default_playback_time"
-        android:textColor="@color/white"
-        android:textSize="19sp"
-        app:layout_constraintStart_toStartOf="@+id/music_player_seekbar"
-        app:layout_constraintTop_toBottomOf="@+id/music_player_seekbar" />
-
-    <TextView
-        android:id="@+id/music_player_song_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="@string/default_playback_time"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/music_player_seekbar"
-        app:layout_constraintTop_toBottomOf="@+id/music_player_seekbar"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/music_player_song_title"
-        style="@style/HorizontalAutoScrollTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="50dp"
-        android:text="@string/default_song_name"
-        android:textColor="@color/white"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toTopOf="@+id/music_player_seekbar"
-        app:layout_constraintEnd_toStartOf="@+id/music_player_menu_btn"
-        app:layout_constraintStart_toStartOf="@+id/music_player_song_current_position" />
-
-    <TextView
-        android:id="@+id/music_player_screen_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/now_playing"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/music_player_song_artist"
-        style="@style/HorizontalAutoScrollTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/default_artist_name"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/music_player_song_title"
-        app:layout_constraintStart_toStartOf="@+id/music_player_song_current_position"
-        app:layout_constraintTop_toBottomOf="@+id/music_player_song_title"
-        tools:ignore="TextContrastCheck" />
-
-    <ImageButton
-        android:id="@+id/music_player_menu_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="28dp"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/more_features_btn"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/music_player_song_artist"
-        app:layout_constraintEnd_toEndOf="@+id/music_player_song_duration"
-        app:layout_constraintTop_toTopOf="@+id/music_player_song_title"
-        app:srcCompat="@drawable/ic_more_vert_24dp"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <ImageButton
-        android:id="@+id/music_player_close_btn"
-        style="@style/MusicControlBtn"
-        android:layout_width="28dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/close"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_down_24dp"
-        tools:ignore="ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/music_player_navigation" />
+</FrameLayout>
