--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -13,29 +13,9 @@
         android:padding="8dp"
         android:text="@string/setting"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        />
 
-    <LinearLayout
-        android:id="@+id/something"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:padding="8dp">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/dialog_bottom_option_information_ic"
-            android:src="@drawable/ic_info_24dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:padding="8dp" />
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/changelanguage"
@@ -45,19 +25,13 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/dialog_bottom_option_playlist_ic"
-            android:src="@drawable/ic_playlist_add_24dp" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:padding="8dp"
-            android:text="@string/change_language" />
+            android:text="@string/change_language"
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
