--- a/app/src/main/res/navigation/music_player_navigation.xml
+++ b/app/src/main/res/navigation/music_player_navigation.xml
@@ -15,8 +15,8 @@
             app:destination="@id/playlistDetailsFragment"
             app:enterAnim="@android:anim/slide_in_left"
             app:exitAnim="@android:anim/slide_out_right"
-            app:popEnterAnim="@android:anim/slide_in_left"
-            app:popExitAnim="@android:anim/slide_out_right" />
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/playlistDetailsFragment"
