Integrate language changing

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -79,4 +79,8 @@
             android:name="album_id"
             app:argType="long" />
     </fragment>
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.example.mediaplayerapp.ui.setting.SettingFragment"
+        android:label="SettingFragment" />
 </navigation>
