--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,23 +9,24 @@
     <item
         android:id="@+id/navigation_music_library"
         android:icon="@drawable/ic_music_note_24dp"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/title_music" />
 
     <item
         android:id="@+id/navigation_video_library"
         android:icon="@drawable/ic_video_24dp"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/title_video" />
 
     <item
         android:id="@+id/navigation_playlist"
         android:icon="@drawable/ic_playlist_24dp"
-        android:orderInCategory="3"
-        android:title="@string/title_playlist" />
-    <item
-        android:id="@+id/navigation_setting"
-        android:icon="@drawable/ic_playlist_24dp"
         android:orderInCategory="4"
-        android:title="Setting" />
+        android:title="@string/title_playlist" />
+
+    <item
+        android:id="@+id/settingFragment"
+        android:icon="@drawable/ic_playlist_24dp"
+        android:orderInCategory="5"
+        android:title="@string/setting" />
 </menu>
