--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -85,7 +85,7 @@
                     android:id="@+id/tv_favouriteWatchLater"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/watch_later_list"
+                    android:text="@string/watch_later"
                     android:layout_marginStart="20dp"
                     android:layout_gravity="center"
                     android:textSize="24sp"
