Fix integration issues with favorite and watch later playlists

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -81,7 +81,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.mediaplayerapp.ui.setting.SettingsFragment"
+        android:name="com.example.mediaplayerapp.ui.settings.SettingsFragment"
         android:label="SettingFragment" />
     <fragment
         android:id="@+id/navigation_more"
