--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -66,7 +66,7 @@
                     android:id="@+id/cardView_thumbnailFavourite"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    app:cardBackgroundColor="@color/blue1"
+                    app:cardBackgroundColor="@color/cyan"
                     android:layout_marginStart="10dp"
                     app:cardCornerRadius="12dp"
                     >
@@ -74,7 +74,7 @@
                         android:id="@+id/img_thumbnailFavourite"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:background="@color/blue1"
+                        android:background="@color/cyan"
 
                         android:layout_gravity="center"
                         android:contentDescription="@string/image_for_thumbnail"
@@ -87,13 +87,9 @@
                     android:id="@+id/tv_myFavourite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
-
                     android:text="@string/my_favourites"
-
-                    android:textColor="@color/colorPlaylist_textColor"
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
