Integrate favorite and watch later

--- a/app/src/main/res/layout/bottom_sheet_song.xml
+++ b/app/src/main/res/layout/bottom_sheet_song.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/bs_song"
-    android:background="@color/white">
+    android:id="@+id/bs_song">
 
     <TextView
         android:id="@+id/bottom_sheet_song_name_textview"
@@ -35,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:padding="8dp"
-            android:text="@string/detail" />
+            android:text="@string/details" />
     </LinearLayout>
 
     <LinearLayout
@@ -59,6 +58,54 @@
             android:layout_gravity="center_vertical"
             android:padding="8dp"
             android:text="@string/dialog_bottom_option_playlist" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottom_sheet_add_song_to_favorites"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/favorite"
+            android:src="@drawable/ic_favorite_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"
+            android:text="@string/favorite" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottom_sheet_add_song_to_watch_later"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/listen_later"
+            android:src="@drawable/ic_watch_later_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"
+            android:text="@string/listen_later" />
 
     </LinearLayout>
 
