--- a/app/src/main/res/layout/dialog_rename_playlist.xml
+++ b/app/src/main/res/layout/dialog_rename_playlist.xml
@@ -19,10 +19,10 @@
         android:id="@+id/edt_renamePlaylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="12dp"
         android:hint="@string/new_playlist_name"
         android:textSize="20sp"
         android:textColor="@color/black"
-        />
+        android:importantForAutofill="no"
+        android:inputType="textPersonName" />
 </LinearLayout>
