--- a/app/src/main/res/drawable/shape_playlist_bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/shape_playlist_bottom_sheet_background.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="?android:windowBackground"/>
     <corners android:topLeftRadius="16dp"
         android:topRightRadius="16dp"/>
 </shape>
