--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -1,79 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp"
-    android:id="@+id/layoutItem_playlist"
     android:background="?attr/selectableItemBackground"
-    >
+    android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:elevation="0dp"
-        app:cardElevation="0dp"
-
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="12dp"
         android:layout_marginStart="10dp"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="0dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
-            android:id="@+id/img_thumbnail"
+            android:id="@+id/playlist_thumbnail"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:contentDescription="@string/image_for_thumbnail"
-            android:src="@drawable/ic_launcher_background"
             android:scaleType="centerCrop"
-            />
+            android:src="@drawable/ic_playlist_24dp" />
+
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tv_playlistName"
+        android:id="@+id/playlist_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="@string/app_name"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/playlist_name"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/playlist_item_count"
         app:layout_constraintStart_toEndOf="@id/cardView_thumbnail"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_playlistNumbers"
+        android:id="@+id/playlist_item_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="@string/app_name"
+        android:layout_marginTop="8dp"
+
+        android:layout_marginBottom="8dp"
+        android:text="@string/item_count"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cardView_thumbnail"
-
-        app:layout_constraintTop_toBottomOf="@id/tv_playlistName" />
-
+        app:layout_constraintStart_toStartOf="@+id/playlist_name"
+        app:layout_constraintTop_toBottomOf="@+id/playlist_name" />
 
     <ImageButton
-        android:id="@+id/imgBtn_more"
+        android:id="@+id/more_btn"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:contentDescription="@string/add_more"
-        android:background="?attr/selectableItemBackground"
-
-        android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
+        android:layout_marginEnd="10dp"
+        android:background="?selectableItemBackground"
+        android:contentDescription="@string/add_more"
         android:src="@drawable/ic_more_vert_24dp"
-
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/black" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
