--- a/app/src/main/res/layout/bottom_sheet_playlist.xml
+++ b/app/src/main/res/layout/bottom_sheet_playlist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
+        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
         android:text="@string/playlist_name"
-        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -24,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="12dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal">
 
         <ImageView
@@ -32,7 +31,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_play_circle_outline_24dp"
-            app:tint="@color/black"
             tools:ignore="ContentDescription" />
 
         <TextView
@@ -40,8 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/play_all"
-            android:textColor="@color/black" />
+            android:text="@string/play_all" />
     </LinearLayout>
 
     <LinearLayout
@@ -50,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="12dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal">
 
         <ImageView
@@ -58,16 +55,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_edit_24dp"
-            app:tint="@color/black"
-            android:contentDescription="@string/rename" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rename"
             android:layout_marginStart="24dp"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
@@ -77,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="12dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal">
 
         <ImageView
@@ -85,16 +80,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_delete_24dp"
-            app:tint="@color/black"
-            android:contentDescription="@string/delete" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete"
             android:layout_marginStart="24dp"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/black" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
