--- a/app/src/main/res/layout/bottom_sheet_playlist_details.xml
+++ b/app/src/main/res/layout/bottom_sheet_playlist_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bs_playlist_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,21 +9,21 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/tv_playlist_details_name"
+        android:id="@+id/playlist_details_bottom_sheet_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
+        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
         android:text="@string/app_name"
-        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <LinearLayout
-        android:id="@+id/bs_startPlaylistDetailsItem"
+        android:id="@+id/playlist_details_bottom_sheet_play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -32,23 +32,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_play_circle_outline_24dp"
-            app:tint="@color/black" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/play_next"
-            android:textColor="@color/black" />
+            android:text="@string/play" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bs_addToQueuePlaylistDetailsItem"
+        android:id="@+id/playlist_details_bottom_sheet_watch_later"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -56,24 +56,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_add_to_queue_24dp"
-            app:tint="@color/black" />
+            android:src="@drawable/ic_watch_later_24dp"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/watch_later"
-            android:textColor="@color/black" />
+            android:text="@string/watch_later" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bs_addToFavouritePlaylistDetailsItem"
+        android:id="@+id/playlist_details_bottom_sheet_favorite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -82,23 +82,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_favorite_24dp"
-            app:tint="@color/black" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/add_to_favorite"
-            android:textColor="@color/black" />
+            android:text="@string/favorite" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bs_deletePlaylistDetailsItem"
+        android:id="@+id/playlist_details_bottom_sheet_remove"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -107,23 +107,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_delete_24dp"
-            app:tint="@color/black" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/remove"
-            android:textColor="@color/black" />
+            android:text="@string/remove" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/bs_propertiesPlaylistDetailsItem"
+        android:id="@+id/playlist_details_bottom_sheet_properties"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="?attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="12dp">
 
@@ -132,14 +132,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_info_24dp"
-            app:tint="@color/black" />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
-            android:text="@string/properties"
-            android:textColor="@color/black" />
+            android:text="@string/properties" />
+
     </LinearLayout>
+
 </LinearLayout>
