--- a/app/src/main/res/layout/dialog_playlist_item_properties.xml
+++ b/app/src/main/res/layout/dialog_playlist_item_properties.xml
@@ -3,17 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    >
+    android:padding="16dp">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:text="@string/properties"
+        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
         android:textSize="24sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,25 +21,17 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
-            android:text="@string/file_name"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-
-
-            />
+            android:text="@string/title"
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/tv_nameProp"
+            android:id="@+id/playlist_item_properties_dialog_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -52,23 +42,17 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
             android:text="@string/duration"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/tv_durationProp"
+            android:id="@+id/playlist_item_properties_dialog_duration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,22 +63,17 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
             android:text="@string/location"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/tv_locationProp"
+            android:id="@+id/playlist_item_properties_dialog_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textColor="@android:color/darker_gray"
-            />
+            android:textSize="20sp" />
+
     </LinearLayout>
 </LinearLayout>
