--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context=".ui.playlist.playlist_details.PlaylistDetailsFragment">
+    tools:context=".ui.playlist.PlaylistDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toTopOf="@id/view_background">
 
             <ImageView
-                android:id="@+id/img_thumbnailPlaylistDetails"
+                android:id="@+id/playlist_details_item_thumbnail"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:contentDescription="@string/image_for_thumbnail"
@@ -47,7 +47,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/tv_playlistDetailsName"
+            android:id="@+id/playlist_details_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -60,7 +60,7 @@
             app:layout_constraintTop_toTopOf="@id/view_background" />
 
         <TextView
-            android:id="@+id/tv_playlistDetailsNumbers"
+            android:id="@+id/playlist_details_item_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -68,10 +68,10 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/cardView_thumbnailMediaQueue"
-            app:layout_constraintTop_toBottomOf="@+id/tv_playlistDetailsName" />
+            app:layout_constraintTop_toBottomOf="@+id/playlist_details_name" />
 
         <ImageView
-            android:id="@+id/btn_addMore"
+            android:id="@+id/playlist_details_add_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
@@ -82,7 +82,8 @@
             app:layout_constraintBottom_toBottomOf="@+id/view_background"
             app:layout_constraintEnd_toEndOf="@id/view_background"
             app:layout_constraintTop_toTopOf="@+id/view_background"
-            app:tint="@color/white" />
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -92,16 +93,16 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/view_background"
-            app:layout_constraintTop_toBottomOf="@id/btn_addMore" />
+            app:layout_constraintTop_toBottomOf="@id/playlist_details_add_btn" />
 
         <LinearLayout
-            android:id="@+id/layout_playAll"
+            android:id="@+id/playlist_details_play_all_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?selectableItemBackground"
             android:clickable="true"
             android:padding="8dp"
-            app:layout_constraintEnd_toStartOf="@id/layout_shuffleAll"
+            app:layout_constraintEnd_toStartOf="@id/playlist_details_shuffle_all_btn"
             app:layout_constraintStart_toStartOf="@id/view_background"
             app:layout_constraintTop_toBottomOf="@id/view_background">
 
@@ -111,7 +112,8 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/black"
-                android:src="@drawable/ic_play_circle_outline_24dp" />
+                android:src="@drawable/ic_play_circle_outline_24dp"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/tv_playAll"
@@ -125,16 +127,16 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layout_shuffleAll"
+            android:id="@+id/playlist_details_shuffle_all_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?selectableItemBackground"
             android:clickable="true"
             android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/layout_playAll"
+            app:layout_constraintBottom_toBottomOf="@id/playlist_details_play_all_btn"
             app:layout_constraintEnd_toEndOf="@id/view_background"
-            app:layout_constraintStart_toEndOf="@id/layout_playAll"
-            app:layout_constraintTop_toTopOf="@id/layout_playAll">
+            app:layout_constraintStart_toEndOf="@id/playlist_details_play_all_btn"
+            app:layout_constraintTop_toTopOf="@id/playlist_details_play_all_btn">
 
             <ImageView
                 android:id="@+id/img_shuffleAll"
@@ -142,7 +144,8 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/black"
-                android:src="@drawable/ic_shuffle_24dp" />
+                android:src="@drawable/ic_shuffle_24dp"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/tv_shuffleAll"
@@ -157,7 +160,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_playlistsDetails"
+        android:id="@+id/playlist_details_item_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8dp"
