--- a/app/src/main/res/layout/fragment_video_favourite.xml
+++ b/app/src/main/res/layout/fragment_video_favourite.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.playlist.media_queue.video_fav.VideoFavouriteFragment">
+    tools:context=".ui.special_playlists.video_fav.VideoFavouriteFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_video_favourite"
