--- a/app/src/main/res/layout/fragment_music_queue.xml
+++ b/app/src/main/res/layout/fragment_music_queue.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.playlist.media_queue.music_queue.MusicQueueFragment">
+    tools:context=".ui.special_playlists.music_queue.MusicQueueFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_music_queue"
